--- a/package.json
+++ b/package.json
@@ -1,17 +1,29 @@
 {
-  "name": "movieapp",
+  "name": "netflix-clone",
+  "homepage": "https://movie.hoadesign.net",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
     "@testing-library/jest-dom": "^5.16.5",
-    "@testing-library/react": "^13.4.0",
+    "@testing-library/react": "^13.3.0",
     "@testing-library/user-event": "^13.5.0",
+    "axios": "^0.27.2",
+    "firebase": "^9.9.3",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-icons": "^4.4.0",
+    "react-read-more-read-less": "^1.0.7",
+    "react-router-dom": "^6.3.0",
     "react-scripts": "5.0.1",
+    "react-youtube": "^10.0.0",
+    "read-more-react": "^1.0.10",
+    "read-smore": "^2.0.4",
+    "tailwind-scrollbar-hide": "^1.1.7",
+    "validator": "^13.7.0",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
+    "predeploy": "npm run build",
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
@@ -34,5 +46,10 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "autoprefixer": "^10.4.8",
+    "postcss": "^8.4.16",
+    "tailwindcss": "^3.1.8"
   }
 }
